<resources>
    <string name="app_name">IFRS Eventos</string>
    <string name="titulo_app">IFRS Eventos</string>
    <string name="ifrsLogo">Logo IFRS</string>
    <string name="userNameHint">Usuário</string>
    <string name="passwordHint">Senha</string>
    <string name="login">Entrar</string>
    <string name="resgistre">Registrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="site">Ver Site</string>
    <string name="entrar">Entrar</string>
    <string name="eventName">Nome Evento</string>
    <string name="descImg">ImgEvento</string>
    <string name="tituloRegistrar">IFRS Eventos - Registrar </string>
    <string name="tituloLogin">IFRS Eventos - Login </string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_about">EventAboutActivity</string>
</resources>
