<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trabalho.ifrs.appeventos.EventFragmentDetail">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="false"
                android:contentDescription="@string/descImg"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/mostrapoa" />

            <TextView
                android:id="@+id/txtNomeEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/eventImage"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="16dp"
                android:text="@string/eventName"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNomeEvento"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="91dp"
                android:text="@string/site" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
